--- a/Laboratorio_3.ipynb
+++ b/Laboratorio_3.ipynb
@@ -176,7 +176,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,7 +227,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +293,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +317,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +363,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,7 +414,7 @@
       "metadata": {
         "id": "vqlilwDD5Xq4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -485,7 +485,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -773,6 +773,32 @@
     {
       "cell_type": "code",
       "source": [
+        "def saludo(name, lastname):\n",
+        "    print(f\"Hola {name} {lastname}, bienvenido al curso\")\n",
+        "\n",
+        "saludo(lastname = \"Ayala\", name = \"Gustavo\")"
+      ],
+      "metadata": {
+        "id": "gz0LPRoTNO3m",
+        "outputId": "1b024448-41d4-4c4e-8188-f5817e3a8d93",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola Gustavo Ayala, bienvenido al curso\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def enviar_email(destinatario, asunto=\"Sin asunto\", mensaje=\"\"):\n",
         "    \"\"\"Envía un email simulado con los detalles proporcionados.\"\"\"\n",
         "    print(f\"Enviando email a: {destinatario}\")\n",
@@ -799,6 +825,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "def sumar_numeros(*numeros):\n",
         "    \"\"\"Suma una cantidad variable de números.\"\"\"\n",
         "    total = sum(numeros)\n",
@@ -825,6 +852,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "def crear_perfil(**informacion):\n",
         "    \"\"\"Crea un perfil de usuario con la información proporcionada.\"\"\"\n",
         "    print(\"Perfil de usuario:\")\n",
@@ -834,10 +862,26 @@
         "crear_perfil(nombre=\"Laura\", edad=28, ciudad=\"Barcelona\", profesion=\"Ingeniera\")\n"
       ],
       "metadata": {
-        "id": "ovfbF1bcaYxU"
+        "id": "ovfbF1bcaYxU",
+        "outputId": "2c58b70e-c13c-4a3a-abc7-557aecfa3eb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Perfil de usuario:\n",
+            "Nombre: Laura\n",
+            "Edad: 28\n",
+            "Ciudad: Barcelona\n",
+            "Profesion: Ingeniera\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -863,12 +907,98 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def enviar_notificacion(mensaje, *usuarios):\n",
+        "    \"\"\"Envía un mensaje de notificación a múltiples usuarios.\"\"\"\n",
+        "    for usuario in usuarios:\n",
+        "        print(f\"Notificación para {usuario}: {mensaje}\")\n",
+        "\n",
+        "enviar_notificacion(\"La reunión comenzará en 1 hora\", \"Ana\", \"Carlos\", \"Luis\")"
+      ],
       "metadata": {
-        "id": "rvba96VLcJ6C"
+        "id": "rvba96VLcJ6C",
+        "outputId": "57924f4e-0ee1-444d-a85b-947d13c5424e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Notificación para Ana: La reunión comenzará en 1 hora\n",
+            "Notificación para Carlos: La reunión comenzará en 1 hora\n",
+            "Notificación para Luis: La reunión comenzará en 1 hora\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def my_function(*argumentos):\n",
+        "    print(argumentos)\n",
+        "my_function('Gustavo', 'Ayala', 'Villavicencio', 30)"
+      ],
+      "metadata": {
+        "id": "a632UAcMahS7",
+        "outputId": "927a1659-f6b8-4f70-d26a-e2c1abd50f40",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('Gustavo', 'Ayala', 'Villavicencio', 30)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dicc = {Gustavo}"
+      ],
+      "metadata": {
+        "id": "ZxsoYDVqdV73"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def my_function(**argumentos):\n",
+        "    print(f'{argumentos[\"name\"]} {argumentos[\"lastname\"]} tiene {argumentos[\"age\"]} años')\n",
+        "\n",
+        "my_function(name = 'Gustavo',\n",
+        "            lastname = 'Ayala',\n",
+        "            age = 30)"
+      ],
+      "metadata": {
+        "id": "zEUy3_U3cQJf",
+        "outputId": "1f1b2b9d-1df4-4919-ec04-f95baf082510",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Gustavo Ayala tiene 30 años\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -886,7 +1016,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def procesar_pedido(cliente, **articulos):\n",
+        "    \"\"\"Procesa un pedido de un cliente con diferentes artículos y sus cantidades.\"\"\"\n",
+        "    print(f\"Pedido de {cliente}:\")\n",
+        "    for articulo, cantidad in articulos.items():\n",
+        "        print(f\"- {articulo}: {cantidad} unidades\")\n",
+        "\n",
+        "procesar_pedido(\"Gustavo\", manzanas=5, naranjas=3, peras=2)"
+      ],
       "metadata": {
         "id": "TYej053QcMD9"
       },
@@ -908,7 +1046,68 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "datos = (1, 2, 5, 3)\n",
+        "mitad = len(datos)\n",
+        "datos[mitad - 4]"
+      ],
+      "metadata": {
+        "id": "Op1xGK_nhvER",
+        "outputId": "7dc59caf-c42d-45bd-c080-227db3b3c426",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcular_estadisticas(*datos):\n",
+        "    \"\"\"Calcula y devuelve la media, mediana y moda de una serie de números sin usar librerías.\"\"\"\n",
+        "\n",
+        "    #Para calcular la media\n",
+        "    media = sum(datos) / len(datos)\n",
+        "\n",
+        "    #Para calcular la mediana\n",
+        "    datos_ordenados = sorted(datos)\n",
+        "    n = len(datos_ordenados)\n",
+        "    mitad = n // 2\n",
+        "    if n % 2 == 0:  # Si hay un número par de elementos\n",
+        "        mediana = (datos_ordenados[mitad - 1] + datos_ordenados[mitad]) / 2\n",
+        "    else:           # Si hay un número impar de elementos\n",
+        "        mediana = datos_ordenados[mitad]\n",
+        "\n",
+        "    # Para calcular la moda\n",
+        "    frecuencia = {}\n",
+        "    for numero in datos:\n",
+        "        frecuencia[numero] = frecuencia.get(numero, 0) + 1\n",
+        "    moda = [key for key, value in frecuencia.items() if value == max(frecuencia.values())]\n",
+        "\n",
+        "    # Si hay múltiples modas, devolvemos la lista; si solo hay una, devolvemos ese valor.\n",
+        "    if len(moda) == 1:\n",
+        "        moda = moda[0]\n",
+        "    else:\n",
+        "        moda = \"No hay una moda única\" if len(moda) == n else moda\n",
+        "\n",
+        "    return {\"media\": media, \"mediana\": mediana, \"moda\": moda}\n",
+        "\n",
+        "# Ejemplo de uso:\n",
+        "resultados = calcular_estadisticas(1, 2, 2, 3, 4, 4, 4, 5)\n",
+        "print(resultados)"
+      ],
       "metadata": {
         "id": "tJ-cI6eccOBS"
       },
@@ -1123,6 +1322,33 @@
       "metadata": {
         "id": "AsNLIvHac12j"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "type(sum((1, 2, 3.0)))"
+      ],
+      "metadata": {
+        "id": "3rJQgp-qk-mA",
+        "outputId": "f0b87b23-0515-444e-a5f2-56b2df6ac1fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "float"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
     },
     {
       "cell_type": "markdown",
