--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -124,10 +124,26 @@
         "    contador += 1"
       ],
       "metadata": {
-        "id": "lrVZrCTLFJml"
+        "id": "lrVZrCTLFJml",
+        "outputId": "6c199850-cbc9-4120-b176-addc0b45029f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -149,24 +165,32 @@
       ],
       "metadata": {
         "id": "3c2nrwndHg55",
-        "outputId": "6a839465-b4a5-4fbf-ed50-26f8b04f4431",
+        "outputId": "09a1b216-eb89-48a2-bb91-ed80a816daeb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Introduce la contraseña: recreto\n",
-            "Introduce la contraseña: sas\n",
+            "Introduce la contraseña: secret\n",
             "Introduce la contraseña: secreto\n",
             "¡Contraseña correcta!\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "1CU0-hNBO2-a"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -212,6 +236,42 @@
             "Introduce la contraseña: rem\n",
             "Introduce la contraseña: rem\n",
             "cuenta bloqueada!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "contraseña = ''\n",
+        "contador = 1\n",
+        "\n",
+        "while contraseña != 'Real Madrid':\n",
+        "    contraseña = input('Introduce la contraseña: ')\n",
+        "    contador += 1\n",
+        "    if contador > 3:\n",
+        "      print(\"Se bloqueo el acceso\")\n",
+        "      break\n",
+        "if contador <= 3:\n",
+        "    print(\"Contraseña correcta\")"
+      ],
+      "metadata": {
+        "id": "DNV6xNuvPGw6",
+        "outputId": "9bac29b3-03d6-46d8-edce-097cfe694b71",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Introduce la contraseña: real madrid\n",
+            "Introduce la contraseña: madrid\n",
+            "Introduce la contraseña: barcelona\n",
+            "Se bloqueo el acceso\n"
           ]
         }
       ]
@@ -294,22 +354,50 @@
       ],
       "metadata": {
         "id": "e0BXlSAsJpGW",
-        "outputId": "9e206168-e154-42cf-d66d-34fe9e2f29bb",
+        "outputId": "2c5fa2f6-41c1-4048-a6a3-a528e43c8c0c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingresa un número entero (0 para terminar): 45\n",
-            "Ingresa un número entero (0 para terminar): 45\n",
-            "Ingresa un número entero (0 para terminar): 45\n",
             "Ingresa un número entero (0 para terminar): 0\n",
-            "La suma total es 135\n"
+            "La suma total es 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sumatoria = 0\n",
+        "numero = ''\n",
+        "\n",
+        "while numero != 0:\n",
+        "    numero = int(input(\"Ingrese el número entero: \"))\n",
+        "    sumatoria += numero\n",
+        "\n",
+        "print(f'La suma total es {sumatoria}')"
+      ],
+      "metadata": {
+        "id": "b3NYRJojRZqZ",
+        "outputId": "0930e8f9-d428-48c1-c439-1ccbd27da0d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el número entero: 0\n",
+            "La suma total es 0\n"
           ]
         }
       ]
@@ -373,12 +461,35 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "while True:\n",
+        "    number = int(input('Ingrese un número par: '))\n",
+        "    if number % 2 == 0:\n",
+        "      print(\"Correcto, usted ingreso un número par\")\n",
+        "      break\n",
+        "    else:\n",
+        "      print(\"El número ingresado no es un número par, intente de nuevo\")\n"
+      ],
       "metadata": {
-        "id": "dmJCXUOQJn__"
+        "id": "dmJCXUOQJn__",
+        "outputId": "c5d4cf40-c212-4abc-fa80-ce0cc8c1b543",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese un número par: 11\n",
+            "El número ingreso no es un número par, intente de nuevo\n",
+            "Ingrese un número par: 2\n",
+            "Correcto, usted ingreso un número par\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -395,12 +506,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "factorial = 1\n",
+        "numero = int(input(\"Ingrese el número del cual desee calcular su factorial: \"))\n",
+        "\n",
+        "if numero < 0:\n",
+        "    print(\"El factorial no está definido para números negativos.\")\n",
+        "elif numero == 0:\n",
+        "    print(\"El factorial de 0 es 1.\")\n",
+        "else:\n",
+        "    numero_inicial = numero\n",
+        "    while numero >= 2:\n",
+        "        factorial *= numero\n",
+        "        numero -= 1\n",
+        "    print(f'El factorial de {numero_inicial} es {factorial}')"
+      ],
       "metadata": {
-        "id": "Ss5egYmdJnn0"
+        "id": "Ss5egYmdJnn0",
+        "outputId": "61460d56-66d1-4922-e766-35dab4128331",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el número del cual desee calcular su factorial: 3\n",
+            "El factorial de 3 es 6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -463,18 +601,16 @@
         "frutas = ['manzana', 'banana', 'cereza']\n",
         "\n",
         "for fruta in frutas:\n",
-        "    print(fruta)\n",
-        "\n",
-        "\n"
+        "    print(fruta)"
       ],
       "metadata": {
         "id": "b_51Ng0_MsTb",
-        "outputId": "33a21a28-7abb-4d54-dc1b-f3c9e37ae2e3",
+        "outputId": "b3acd83d-fbfb-4e29-db51-3a4ff13d9a44",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -484,16 +620,6 @@
             "banana\n",
             "cereza\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "str"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
         }
       ]
     },
@@ -648,12 +774,12 @@
       ],
       "metadata": {
         "id": "eMzXfuRmPpbT",
-        "outputId": "67b03822-be58-4f68-d4a9-995600b121b8",
+        "outputId": "e8eecb4d-ea7c-43d5-85d1-af8e083d63d5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,16 +797,6 @@
             "19\n",
             "20\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "int"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
         }
       ]
     },
@@ -908,40 +1024,20 @@
     {
       "cell_type": "code",
       "source": [
-        "cadena = input(\"Ingrese el texto: \").lower()\n",
-        "cadena"
+        "cadena =input(\"Ingrese el texto:  \")\n",
+        "vocales = \"AEIOUaeiouÁÉÍÓÚ\"\n",
+        "contador = 0\n",
+        "\n",
+        "for caracter in cadena:\n",
+        "  if caracter in vocales:\n",
+        "    contador += 1\n",
+        "print(f'El número de vocales es {contador}')"
       ],
       "metadata": {
-        "id": "damukdrlN_RU",
-        "outputId": "8414de1d-a881-496c-a216-88d80fce6b1f",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        }
+        "id": "zXhft1UTqgX6"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Ingrese el texto: Hola 45\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "'hola 45'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
-          },
-          "metadata": {},
-          "execution_count": 47
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1046,7 +1142,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
