--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -130,7 +130,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +359,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +390,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +528,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,7 +610,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -779,7 +779,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1025,7 +1025,7 @@
       "cell_type": "code",
       "source": [
         "cadena =input(\"Ingrese el texto:  \")\n",
-        "vocales = \"AEIOUaeiouÁÉÍÓÚ\"\n",
+        "vocales = \"AEIOUaeiouÁÉÍÓÚáéíóú\"\n",
         "contador = 0\n",
         "\n",
         "for caracter in cadena:\n",
@@ -1034,39 +1034,20 @@
         "print(f'El número de vocales es {contador}')"
       ],
       "metadata": {
-        "id": "zXhft1UTqgX6"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "cadena = input(\"Ingrese el texto: \").lower\n",
-        "contador = 0\n",
-        "\n",
-        "for letra in cadena:\n",
-        "  if letra == \"a\" or letra == \"e\" or letra == \"i\" or letra == \"o\" or letra == \"u\":\n",
-        "    contador += 1\n",
-        "\n",
-        "print('El número de vocales es', contador)\n"
-      ],
-      "metadata": {
-        "id": "nFRZHz13R6O0",
-        "outputId": "84e83d09-794b-404d-fdda-86eef3067340",
+        "id": "zXhft1UTqgX6",
+        "outputId": "474297d7-a98a-4513-89db-eed47ae696bf",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Ingrese el texto: Gustavo\n",
-            "El número de vocales es 3\n"
+            "Ingrese el texto:  La vaca eres tu\n",
+            "El número de vocales es 6\n"
           ]
         }
       ]
