--- a/Funciones,_modularizacion_y_recursividad.ipynb
+++ b/Funciones,_modularizacion_y_recursividad.ipynb
@@ -238,7 +238,7 @@
       "metadata": {
         "id": "aub5iOqwMEuc"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -288,13 +288,34 @@
       "cell_type": "code",
       "source": [
         "def saludar(nombre, saludo=\"Hola\"):\n",
-        "    return f\"{saludo}, {nombre}\""
+        "    return f\"{saludo}, {nombre}\"\n",
+        "\n",
+        "saludar(\"Gustavo\")"
       ],
       "metadata": {
-        "id": "wKbrkgAxMsr8"
+        "id": "wKbrkgAxMsr8",
+        "outputId": "e43953f1-3f8e-4acf-d990-191e80a9d28a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Hola, Gustavo'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -312,10 +333,22 @@
         "# Salida: Hola, Moni"
       ],
       "metadata": {
-        "id": "dJZuY86gNCgC"
+        "id": "dJZuY86gNCgC",
+        "outputId": "ec692c1f-640b-4b9a-a4ab-88cb143a4bc3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola, Moni\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
