--- a/MODULO-II/[2]_Python_UTEC_251124.ipynb
+++ b/MODULO-II/[2]_Python_UTEC_251124.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -613,7 +612,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 36
         },
         "id": "IirG99rTbFMG",
         "outputId": "d9ffec17-24b2-4027-c903-2f0986ab381e"
@@ -1200,7 +1199,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 141
+          "height": 144
         },
         "id": "bJUszH0No9Dv",
         "outputId": "543b7cc7-eb98-40af-ec19-787143bebb10"
@@ -1228,7 +1227,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 141
+          "height": 144
         },
         "id": "06vNxQrrpAb_",
         "outputId": "b598f936-7861-4661-e2f2-04a544aa744b"
@@ -1282,7 +1281,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 141
+          "height": 144
         },
         "id": "ALJPyDoDpXd2",
         "outputId": "e093707f-7cc3-4196-d304-14aa028e859f"
@@ -1339,9 +1338,328 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "marcas_favoritas = [\"apple\",\"hp\",\"ferrari\"]\n",
+        "marcas_complementarias = [\"dell\",\"toyota\",\"coca_cola\"]"
+      ],
       "metadata": {
         "id": "EjoCoi7cptfO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%whos"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qLoyGjut663X",
+        "outputId": "b8936863-ef40-42bd-ee1d-e7a1645d459a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Variable                 Type    Data/Info\n",
+            "------------------------------------------\n",
+            "datos                    list    n=5\n",
+            "elemento                 str     AAA\n",
+            "letras                   list    n=4\n",
+            "lista_0                  list    n=9\n",
+            "marcas_complementarias   list    n=3\n",
+            "marcas_favoritas         list    n=3\n",
+            "numeros                  list    n=4\n",
+            "pares                    list    n=4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Mis marcas favoritas son \\n{marcas_favoritas}\")\n",
+        "print(f\"\\nMis marcas complementarias son \\n{marcas_complementarias}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yOAWvgV86-wr",
+        "outputId": "c5f235d5-8f34-4080-fd82-9c344b401f3a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mis marcas favoritas son \n",
+            "['apple', 'hp', 'ferrari']\n",
+            "\n",
+            "Mis marcas complementarias son \n",
+            "['dell', 'toyota', 'coca_cola']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# El símbolo \"+\" me sirve para concatenar listas\n",
+        "print(f\"Mi lista de marcas son \\n{marcas_favoritas + marcas_complementarias}\")\n",
+        "print(f\"\\nMis marcas favoritas son \\n{marcas_favoritas}\")\n",
+        "print(f\"\\nMis marcas complementarias son \\n{marcas_complementarias}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wHsl9dqq7Nay",
+        "outputId": "cca04dac-2818-4a0f-c2ce-42937301f7ea"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mi lista de marcas son \n",
+            "['apple', 'hp', 'ferrari', 'dell', 'toyota', 'coca_cola']\n",
+            "\n",
+            "Mis marcas favoritas son \n",
+            "['apple', 'hp', 'ferrari']\n",
+            "\n",
+            "Mis marcas complementarias son \n",
+            "['dell', 'toyota', 'coca_cola']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# El símbolo \"+\" me sirve para concatenar listas\n",
+        "print(f\"Mi lista de valores numéricos es \\n{numeros + pares}\")\n",
+        "print(f\"\\nMi lista de números es \\n{numeros}\")\n",
+        "print(f\"\\nMi lista de números pares es \\n{pares}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZPKE-ryK7uOj",
+        "outputId": "cc94c5ee-8413-4179-a715-e18ee95309e7"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mi lista de valores numéricos es \n",
+            "[1, 2, 3, 4, 0, 2, 4, 6]\n",
+            "\n",
+            "Mi lista de números es \n",
+            "[1, 2, 3, 4]\n",
+            "\n",
+            "Mi lista de números pares es \n",
+            "[0, 2, 4, 6]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# El comando extend me sirve para concatenar listas\n",
+        "marcas_favoritas.extend(marcas_complementarias)\n",
+        "print(f\"\\nMis marcas favoritas son \\n{marcas_favoritas}\")\n",
+        "print(f\"\\nMis marcas complementarias son \\n{marcas_complementarias}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zDmnZMjg81aK",
+        "outputId": "c9715abc-8c37-4dec-c4b3-8e7beef766c2"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mi lista de marcas son \n",
+            "None\n",
+            "\n",
+            "Mis marcas favoritas son \n",
+            "['apple', 'hp', 'ferrari', 'dell', 'toyota', 'coca_cola']\n",
+            "\n",
+            "Mis marcas complementarias son \n",
+            "['dell', 'toyota', 'coca_cola']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Listas numéricas\n",
+        "\n",
+        "numeros_ = [10, 20]\n",
+        "\n",
+        "numeros_2 = list(range(30,300,10))"
+      ],
+      "metadata": {
+        "id": "AgTUki7D8P7C"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "range(30,300,10)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JqrAB-VS90nS",
+        "outputId": "c68b244c-e919-4f00-ee98-dae7f94e9d34"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range(30, 300, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list(range(30,300,10))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "w8WoJh8Z91P9",
+        "outputId": "70223445-1a47-454c-fc3f-3a087bbda97a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[30,\n",
+              " 40,\n",
+              " 50,\n",
+              " 60,\n",
+              " 70,\n",
+              " 80,\n",
+              " 90,\n",
+              " 100,\n",
+              " 110,\n",
+              " 120,\n",
+              " 130,\n",
+              " 140,\n",
+              " 150,\n",
+              " 160,\n",
+              " 170,\n",
+              " 180,\n",
+              " 190,\n",
+              " 200,\n",
+              " 210,\n",
+              " 220,\n",
+              " 230,\n",
+              " 240,\n",
+              " 250,\n",
+              " 260,\n",
+              " 270,\n",
+              " 280,\n",
+              " 290]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(numeros_2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NGdjtClD-Xko",
+        "outputId": "e14e5ffd-4137-4c3a-e640-695538dc456a"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 66
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"La lista de valores numéricos es \\n{numeros_}\")\n",
+        "numeros_.extend(numeros_2)\n",
+        "print(f\"\\nLa lista de valores numéricos es \\n{numeros_}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Tcs8lfdQ-reo",
+        "outputId": "6b5bad69-b1a5-4142-b42a-ae0785b7b9d0"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La lista de valores numéricos es \n",
+            "[10, 20]\n",
+            "\n",
+            "La lista de valores numéricos es \n",
+            "[10, 20, 30, 40, 50, 60, 70, 80, 90, 100, 110, 120, 130, 140, 150, 160, 170, 180, 190, 200, 210, 220, 230, 240, 250, 260, 270, 280, 290]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ZDIkwlPT-h0F"
       },
       "execution_count": null,
       "outputs": []
