--- a/MODULO-II/[2]_Python_UTEC_251124.ipynb
+++ b/MODULO-II/[2]_Python_UTEC_251124.ipynb
@@ -1656,10 +1656,79 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Operaciones numéricas con las listas"
+      ],
+      "metadata": {
+        "id": "BPitXKz__SGc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Cuantificar la cantidad de elementos de una lista\n",
+        "len(numeros_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZDIkwlPT-h0F",
+        "outputId": "55d5fc98-195c-4d7e-f21c-a72e5c3fb251"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "29"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"La suma de los elementos de la lista es \\n{sum(numeros_)}\")\n",
+        "print(f\"El promedio de los elementos de la lista es \\n{sum(numeros_)/len(numeros_)}\")\n",
+        "print(f\"El mínimo de los elementos de la lista es \\n{min(numeros_)}\")\n",
+        "print(f\"El máximo de los elementos de la lista es \\n{max(numeros_)}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZP4I3q3x_X6I",
+        "outputId": "189661a2-b0e5-4be7-d3d8-9e665a53ee9f"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma de los elementos de la lista es \n",
+            "4350\n",
+            "El promedio de los elementos de la lista es \n",
+            "150.0\n",
+            "El mínimo de los elementos de la lista es \n",
+            "10\n",
+            "El máximo de los elementos de la lista es \n",
+            "290\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "ZDIkwlPT-h0F"
+        "id": "sFStIXJk_9eW"
       },
       "execution_count": null,
       "outputs": []
