--- a/MODULO-II/[2]_Python_UTEC_251124.ipynb
+++ b/MODULO-II/[2]_Python_UTEC_251124.ipynb
@@ -1725,10 +1725,67 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Lista de listas"
+      ],
+      "metadata": {
+        "id": "HV5KgwefDbNK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = [1,2,3]\n",
+        "b = [4,5,6]\n",
+        "c = [7,8,9]\n",
+        "r = [a, b, c]"
+      ],
+      "metadata": {
+        "id": "sFStIXJk_9eW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"La lista a es \\n{a}\")\n",
+        "print(f\"La lista b es \\n{b}\")\n",
+        "print(f\"La lista c es \\n{c}\")\n",
+        "print(f\"\\nLa lista de listas es \\n{r}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3ZYMmbipDpFE",
+        "outputId": "c2f8e3d5-eec2-45e1-def4-85b6606f7b8d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La lista a es \n",
+            "[1, 2, 3]\n",
+            "La lista b es \n",
+            "[4, 5, 6]\n",
+            "La lista c es \n",
+            "[7, 8, 9]\n",
+            "\n",
+            "La lista de listas es \n",
+            "[[1, 2, 3], [4, 5, 6], [7, 8, 9]]\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "sFStIXJk_9eW"
+        "id": "C0_0fZFiDyDY"
       },
       "execution_count": null,
       "outputs": []
