--- a/MODULO-II/[5]_Python_UTEC_101224.ipynb
+++ b/MODULO-II/[5]_Python_UTEC_101224.ipynb
@@ -1115,7 +1115,7 @@
     {
       "cell_type": "code",
       "source": [
-        "dc_1 # Diccionario con claves (caracteres): valor"
+        "dc_1 # Diccionario con claves (caracteres): valores (numéricos)"
       ],
       "metadata": {
         "colab": {
@@ -1140,9 +1140,127 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Almacenar todos los pares clave : valor del diccionario \"dc_1\"\n",
+        "items_dc_1 = dc_1.items()"
+      ],
       "metadata": {
         "id": "Y16iFKrTWNVL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Todos los pares clave:valor del diccionario \\n{items_dc_1}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_QCT3CpQW8Va",
+        "outputId": "62c0f39c-3599-4975-9bd4-66667f6eb1b9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Todos los pares clave:valor del diccionario \n",
+            "dict_items([('a', 1), ('b', 2), ('c', 3)])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for c,v in dc_1.items():\n",
+        "  print(f\"La clave {c}, tiene el valor {v}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-QvVyDZ7XEsd",
+        "outputId": "590a5065-56bf-4489-a549-5e10a74d9b05"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La clave a, tiene el valor 1\n",
+            "La clave b, tiene el valor 2\n",
+            "La clave c, tiene el valor 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for c,v in dc_5.items():\n",
+        "  print(f\"La clave {c}, tiene el valor {v}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hT5l2cZaYcQc",
+        "outputId": "27e06a63-802f-4065-83cd-f8bdca5327b5"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La clave david, tiene el valor 10\n",
+            "La clave enzo, tiene el valor 20\n",
+            "La clave pedro, tiene el valor 30\n",
+            "La clave maria, tiene el valor 40\n",
+            "La clave andrea, tiene el valor 50\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Crear una lista a partir del método items\n",
+        "l_dc_5 = list(dc_5.items())\n",
+        "print(f\"La lista creada a partir del método items es \\n{l_dc_5}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B1Zw-xrFYoyy",
+        "outputId": "53c50a00-7f8e-4276-aa05-3804df1def65"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La lista creada a partir del método items es \n",
+            "[('david', 10), ('enzo', 20), ('pedro', 30), ('maria', 40), ('andrea', 50)]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Acceder al último elemento de la lista y mostrar el tipo de dato resultante"
+      ],
+      "metadata": {
+        "id": "gqH7e4-4ZkTs"
       },
       "execution_count": null,
       "outputs": []
