--- a/MODULO-II/[5]_Python_UTEC_101224.ipynb
+++ b/MODULO-II/[5]_Python_UTEC_101224.ipynb
@@ -1257,10 +1257,102 @@
     {
       "cell_type": "code",
       "source": [
-        "# Acceder al último elemento de la lista y mostrar el tipo de dato resultante"
+        "# Acceder al último elemento de la lista y mostrar el tipo de dato resultante\n",
+        "print(f\"El último elemeno de la lista es {l_dc_5[4]}\")\n",
+        "print(f\"El tipo de dato del último elemeno de la lista es {type(l_dc_5[4])}\")\n"
       ],
       "metadata": {
-        "id": "gqH7e4-4ZkTs"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gqH7e4-4ZkTs",
+        "outputId": "7737dbe6-d994-45e1-b63f-67d115a6bc79"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El último elemeno de la lista es ('andrea', 50)\n",
+            "El tipo de dato del último elemeno de la lista es <class 'tuple'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"El diccionario con valores de distinto tipo \\n{dc_2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_JoLHUT-aG1C",
+        "outputId": "e7d6544d-def1-4ee0-ed8f-c53d363ba86b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario con valores de distinto tipo \n",
+            "{'a': {'x': 100}, 'b': [10, 20, 30], 'c': (1, 2, 3, 4, 5)}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dc_2['b'][-1] = 300"
+      ],
+      "metadata": {
+        "id": "e2BkS0DTgDFC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"El diccionario actualizado con valores de distinto tipo \\n{dc_2}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZU23MGB4gUhg",
+        "outputId": "3de3d941-0dbc-41ba-a042-b3178633a66c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El diccionario actualizado con valores de distinto tipo \n",
+            "{'a': {'x': 100}, 'b': [10, 20, 300], 'c': (1, 2, 3, 4, 5)}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Actividad\n",
+        "\n",
+        "# El diccionario dc_2 lo vamos a convertir a una lista con elementos que tendrán\n",
+        "# pares a nivel de tuplas que contengan la clave y valor del diccionario\n",
+        "\n",
+        "# Acceder a la primera tupla y la vamos a convertir en una lista\n",
+        "\n",
+        "# Y vamos a renombrar al primer elemento de nueva lista en \"xx\" en vez de \"a\""
+      ],
+      "metadata": {
+        "id": "J_Y34P-Ngdpe"
       },
       "execution_count": null,
       "outputs": []
