--- a/MODULO-II/[5]_Python_UTEC_101224.ipynb
+++ b/MODULO-II/[5]_Python_UTEC_101224.ipynb
@@ -1347,12 +1347,48 @@
         "# El diccionario dc_2 lo vamos a convertir a una lista con elementos que tendrán\n",
         "# pares a nivel de tuplas que contengan la clave y valor del diccionario\n",
         "\n",
+        "l_dc_2 = list(dc_2.items())\n",
+        "print(f\"La lista creada es \\n{l_dc_2}\")\n",
+        "\n",
         "# Acceder a la primera tupla y la vamos a convertir en una lista\n",
         "\n",
+        "print(f\"\\nEl primer elemento de la nueva lista es {l_dc_2[0]}\")\n",
+        "print(f\"El tipo de dato del primer elemento de la nueva lista es {type(l_dc_2[0])}\")\n",
+        "\n",
+        "l_dc_2_0 = list(l_dc_2[0])\n",
+        "print(f\"\\nLa nueva lista creada es {l_dc_2_0}\")\n",
+        "print(f\"\\nLa nueva lista creada es {l_dc_2_0}\")\n",
         "# Y vamos a renombrar al primer elemento de nueva lista en \"xx\" en vez de \"a\""
       ],
       "metadata": {
-        "id": "J_Y34P-Ngdpe"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J_Y34P-Ngdpe",
+        "outputId": "78cb6610-268e-4267-bb5f-ee7459a447b6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La lista creada es \n",
+            "[('a', {'x': 100}), ('b', [10, 20, 300]), ('c', (1, 2, 3, 4, 5))]\n",
+            "\n",
+            "El primer elemento de la nueva lista es ('a', {'x': 100})\n",
+            "El tipo de dato del primer elemento de la nueva lista es <class 'tuple'>\n",
+            "\n",
+            "La nueva lista creada es ['a', {'x': 100}]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "pYRX2vjijN_Y"
       },
       "execution_count": null,
       "outputs": []
